--- a/style/css/components/secondSection.css
+++ b/style/css/components/secondSection.css
@@ -2,26 +2,194 @@
       background: linear-gradient(156deg, rgba(8, 33, 57, 1) 0%, rgba(8, 33, 57, 1) 42%, rgba(10, 53, 94, 1) 100%);
       background: rgb(8, 33, 57);
       position: relative;
-      height: 200vh;
+      clip-path: polygon(0 0, 100% 0, 100% 92%, 0% 100%);
 }
 
-.imgDataRow{
-    position: relative;
+.imgDataRow {
+      position: relative;
 }
 
-.imgDataAnalyst{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 70%;
+.imgDataAnalyst {
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 70%;
 }
 
-.helpTitle{
-    position: relative;
-    margin-top: 350px;
-    font-size: 4rem;
+.helpTitle {
+      position: relative;
+      margin-top: 350px;
+      font-size: 4rem;
 }
 
 .helpTitle span {
       color: #23b2c8;
+}
+
+.helpCard {
+      background-color: white;
+      border-radius: 25px;
+      padding: 20px 25px;
+}
+
+.helpCard2 {
+      background-color: white;
+      border-radius: 25px;
+      padding: 20px 55px;
+      margin-top: 50px;
+      overflow: hidden;
+      position: relative;
+      margin-bottom: 200px;
+}
+
+.factoryImg {
+      width: 70%;
+}
+
+:root {
+      --fa-border-color: #f0fdff;
+      --fa-border-padding: 20px;
+      --fa-border-radius: 10px;
+}
+
+.fa-chart-line,
+.fa-diagram-project {
+      color: #fd7762;
+      margin-right: 15px;
+}
+
+.fa-file,
+.fa-lock,
+.fa-chart-pie,
+.fa-network-wired,
+.fa-chart-column,
+.fa-triangle-exclamation,
+.fa-trophy {
+      background-color: #f0fdff;
+      margin-right: 10px;
+      padding: 15px;
+}
+
+.fa-fw {
+      width: 2em;
+      text-align: center;
+}
+
+.listCard {
+      padding: 0 7px;
+}
+
+.listCard li {
+      list-style: none;
+      margin-top: 35px;
+}
+
+.btnOrange {
+      background-color: #fd7762;
+      width: 230px;
+      border-radius: 25px;
+      margin-top: 25px;
+      transition: all 0.3s;
+      cursor: pointer;
+}
+
+.btnOrange2 {
+      background-color: #fd7762;
+      width: 270px;
+      border-radius: 25px;
+      margin-top: 25px;
+      transition: all 0.3s;
+      cursor: pointer;
+}
+
+.btnOrange p,
+.btnOrange2 p {
+      transition: all 0.3s;
+      text-transform: uppercase;
+      margin: 8px 20px 8px 20px;
+      font-size: 16px;
+      color: #082139;
+}
+
+.btnOrange:hover,
+.btnOrange2:hover {
+      background-color: #f15c45;
+}
+
+.btnOrange:hover p,
+.btnOrange2:hover p {
+      color: white;
+}
+
+.ipad{
+    background-image: url("../../imgs/ipad-placeholder.png");
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:auto;
+    height: 800px;
+    z-index: 5;
+}
+
+.ipad p{
+    font-size: 10px;
+}
+
+.ipad h3{
+    font-size: 15px;
+}
+
+.ipadBg{
+    background-color: white;
+    margin-bottom: 55px;
+    border-radius: 25px;
+    width: 80%;
+    z-index: 10;
+}
+
+.spinner{
+    position: relative;
+    height: 200px;
+    border: 2px solid rgb(221, 221, 221);
+    padding: 15px;
+}
+
+.ellipse{
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.ellipse:first-child{
+    animation: rotate 5s linear infinite;
+}
+
+.ellipse:nth-child(2n){
+    animation: rotate2 5s linear infinite;
+}
+
+@keyframes rotate{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+transform: rotate(360deg);
+    }
+}
+
+@keyframes rotate2{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+transform: rotate(-360deg);
+    }
+}
+
+.bigEllipse{
+    position: absolute;
+    width: 60%;
+    right: -10%;
 }
