--- a/style/css/components/blog.css
+++ b/style/css/components/blog.css
@@ -1,5 +1,5 @@
 .blogCard {
-      border: 2px solid #a0bdc0;
+      border: 1px solid #a0bdc0;
       border-radius: 15px;
       padding: 25px;
       margin: 15px;
@@ -81,4 +81,20 @@
       font-size: 1.5em;
       padding: 0;
       margin: 0;
+}
+
+.blogBtn {
+      margin-top: 25px;
+      display: inline-block;
+      border: 2px solid #23b2c8;
+      padding: 8px 15px;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: all 0.3s;
+}
+
+.blogBtn:hover {
+      background-color: #23b2c8;
+      transform: scale(1.05);
+      color: white;
 }
