--- a/style/css/components/carrousel.css
+++ b/style/css/components/carrousel.css
@@ -1,3 +1,9 @@
+.carouselSection {
+      background-image: url('../../imgs/shapes/shape-dot-white-bg.png');
+      background-repeat: no-repeat;
+      background-position: right;
+}
+
 .carrousel {
       background-color: rgb(8, 33, 56);
       border-radius: 25px;
@@ -24,11 +30,11 @@
       z-index: 10;
 }
 
-.iconContainer:hover{
+.iconContainer:hover {
       background-color: #2ecbe4;
 }
 
-.carousel-caption{
+.carousel-caption {
       z-index: 50;
       position: relative;
       right: 0;
@@ -40,18 +46,18 @@
       padding: 50px;
 }
 
-.carousel-caption img{
-      width: 20%!important;
-      height: auto!important;
+.carousel-caption img {
+      width: 20% !important;
+      height: auto !important;
       margin-bottom: 15px;
 }
 
-.carousel-caption h3{
+.carousel-caption h3 {
       font-weight: 600;
       color: #23b2c8;
 }
 
-.carousel-caption p{
+.carousel-caption p {
       font-weight: 600;
       font-size: 25px;
 }
@@ -72,7 +78,7 @@
       flex-direction: row;
 }
 
-.carousel-item.active{
+.carousel-item.active {
       display: flex;
       width: 100%;
 }
@@ -89,7 +95,7 @@
       width: 100%;
       top: 0;
       left: 0;
-      position: absolute!important;
+      position: absolute !important;
       background-image: linear-gradient(to left, rgb(8, 33, 56), rgba(8, 33, 56, 0));
       background-repeat: no-repeat;
       background-size: cover;
@@ -118,14 +124,15 @@
       transform: translate(-50%, -50%);
 }
 
-.fleche{
+.fleche {
       display: flex;
       position: relative;
       justify-content: flex-start;
       align-items: center;
 }
 
-.carousel-control-next, .carousel-control-prev{
+.carousel-control-next,
+.carousel-control-prev {
       position: relative;
       border: 1px solid rgb(255, 255, 255);
       width: 50px;
@@ -134,18 +141,19 @@
       border-radius: 100%;
 }
 
-.carousel-control-next-icon, .carousel-control-prev-icon{
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
 }
 
-.carousel-control-next{
+.carousel-control-next {
       margin-left: 25px;
 }
 
-.carousel-indicators{
+.carousel-indicators {
       position: relative;
       margin: 0;
       margin-top: 25px;
@@ -153,20 +161,20 @@
       padding: 0;
 }
 
-.carousel-indicators .active{
+.carousel-indicators .active {
       background-color: #23b2c8;
-      width: 35px!important;
-      border-radius: 10px!important;
+      width: 35px !important;
+      border-radius: 10px !important;
 }
 
-.carousel-indicators [data-bs-target]{
+.carousel-indicators [data-bs-target] {
       height: 10px;
       width: 10px;
       border-radius: 100%;
       margin: 0;
       padding: 0;
       margin-left: 10px;
-      background-clip:border-box;
+      background-clip: border-box;
       box-sizing: border-box;
       border-top: none;
 }
