--- a/style/css/components/carrousel.css
+++ b/style/css/components/carrousel.css
@@ -178,3 +178,37 @@
       box-sizing: border-box;
       border-top: none;
 }
+
+@media screen and (max-width: 767px) {
+      .carrousel {
+            padding: 0;
+            height: 550px;
+      }
+
+      .carousel-caption {
+            display: none;
+      }
+
+      .carousel-item img {
+            width: 100%;
+            height: 80%;
+      }
+
+      .carousel-item:after {
+            background-image: none;
+      }
+
+      .iconContainer {
+            left: 50%;
+      }
+
+      .textCol {
+            margin-top: 25px;
+            left: 50%;
+            top: 90%;
+      }
+
+      .carousel-indicators{
+            justify-content: center;
+      }
+}
