--- a/style/css/components/firstSection.css
+++ b/style/css/components/firstSection.css
@@ -1,3 +1,10 @@
+
+.firstSectionContainer{
+    position: relative;
+    z-index: 999;
+}
+
+
 .btnBlue {
       background-color: #23b2c8;
       display: inline-block;
@@ -21,4 +28,13 @@
 
 .btnBlue:hover p {
     color: white;
+}
+
+@media screen and (max-width: 495px) {
+    .btnBlue{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+    }
 }
