--- a/style/css/components/secondSection.css
+++ b/style/css/components/secondSection.css
@@ -157,6 +157,7 @@
       z-index: 10;
 }
 
+
 .spinner {
       position: relative;
       height: 200px;
@@ -230,6 +231,9 @@
       .listCard {
             display: flex;
             padding: 0;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            align-items: center;
       }
 
       .listCard li {
@@ -240,8 +244,50 @@
             text-align: center;
       }
 
-      .btnOrange{
+      .btnOrange, .btnOrange2{
             margin-left: auto;
             margin-right: auto;
+      }
+}
+
+@media screen and (max-width: 1399px) {
+      .ipad{
+            background-image: none;
+            height: auto;
+            margin-top: 80px;
+      }
+
+      .colSpinner{
+            padding: 15px 20px;
+      }
+}
+
+@media screen and (max-width: 991px) {
+
+      .bigEllipse{
+            display: none;
+      }
+}
+
+@media screen and (max-width: 1199px) {
+      .spinner{
+            border: none;
+      }
+}
+
+@media screen and (max-width: 767px){
+      .ipad{
+            display: none!important;
+      }
+
+      .helpTitle{
+            font-size: 3em;
+      }
+}
+
+@media screen and (max-width: 380px){
+      .btnOrange, .btnOrange2{
+            width: auto;
+            text-align: center;
       }
 }
